apps/pk8s/sipwork/sip.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: sip
  name: sip
  namespace: sipwork
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sip
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: sip
      annotations:
        k8s.v1.cni.cncf.io/networks: default/vlan-sip
    spec:
      initContainers: []
      containers:
        - env:
            - name: TZ
              value: Europe/Madrid
          image: ghcr.io/kamailio/kamailio:5.8.1-bookworm
          name: kamailio
          ports:
            - name: sip-udp
              protocol: UDP
              containerPort: 5060
            - name: sip-tcp
              protocol: TCP
              containerPort: 5060
            - name: sip-tls
              protocol: TCP
              containerPort: 5061
          resources: {}
          volumeMounts:
            - mountPath: /etc/kamailio/
              name: kam-cfg
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: kam-cfg
          configMap:
            name: kamailio-cfg
