apps/pk8s/sipwork/services_ext.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: sipwork
spec:
  type: ExternalName
  ports:
    - port: 8123
      targetPort: 8123
      name: http
      protocol: TCP
  externalName: 192.168.1.5
