apps/pk8s/sipwork/home-assistant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: home-assistant
  name: home-assistant
  namespace: sipwork
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: home-assistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: home-assistant
    spec:
      containers:
        - env:
            - name: PGID
              value: '1000'
            - name: PUID
              value: '1000'
            - name: TZ
              value: Europe/Madrid
          image: lscr.io/linuxserver/homeassistant:2023.12.4 # {"$imagepolicy": "sipwork:home-assistant"}
          name: home-assistant
          ports:
            - containerPort: 8123
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: home-assistant-config
      restartPolicy: Always
      volumes:
        - name: home-assistant-config
          persistentVolumeClaim:
            claimName: home-assistant-config
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: sipwork
  annotations:
    metallb.universe.tf/address-pool: internal-pool
    metallb.universe.tf/loadBalancerIPs: 192.168.4.248
spec:
  type: LoadBalancer
  ports:
    - port: 8123
      targetPort: 8123
      name: http
      protocol: TCP
  selector:
    io.kompose.service: home-assistant
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: sipwork
  annotations:
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirectscheme@kubernetescrd
    traefik.frontend.passHostHeader: 'true'
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - home.sipwork.pro
      secretName: sipwork.pro-tls
  rules:
    - host: home.sipwork.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mosquitto
  name: mosquitto
  namespace: sipwork
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mosquitto
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mosquitto
    spec:
      containers:
        - image: eclipse-mosquitto:2.0.18 # {"$imagepolicy": "sipwork:mosquitto"}
          name: mosquitto
          ports:
            - containerPort: 1883
            - containerPort: 1884
          resources: {}
          volumeMounts:
            - mountPath: /mosquitto/config
              name: mosquitto-config
            - mountPath: /mosquitto/config/mosquitto.conf
              name: mosquitto-custom-config
              subPath: mosquitto.conf
      restartPolicy: Always
      volumes:
        - name: mosquitto-config
          persistentVolumeClaim:
            claimName: mosquitto-config
        - name: mosquitto-custom-config
          configMap:
            name: mosquitto-custom-config
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: sipwork
spec:
  type: ClusterIP
  ports:
    - port: 1883
      targetPort: 1883
      name: mqtt
      protocol: TCP
    - port: 1884
      targetPort: 1884
      name: websocket
      protocol: TCP
  selector:
    io.kompose.service: mosquitto
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: zigbee2mqtt
  name: zigbee2mqtt
  namespace: sipwork
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: zigbee2mqtt
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/Madrid
          image: koenkk/zigbee2mqtt:1.35.0 # {"$imagepolicy": "sipwork:zigbee2mqtt"}
          name: zigbee2mqtt
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /app/data
              name: zigbee2mqtt-data
      restartPolicy: Always
      volumes:
        - name: zigbee2mqtt-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: sipwork
  annotations:
    metallb.universe.tf/address-pool: internal-pool
    metallb.universe.tf/loadBalancerIPs: 192.168.4.247
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP
  selector:
    io.kompose.service: zigbee2mqtt
